# inventory-management-system

./: .tool-versions  README.md
backend/: .gitignore  README.md  extensions.py  main.py  pyproject.toml
backend/controllers/: employee.py  item.py  transaction.py  utils.py
backend/misc/: extensions.py  seed.py
backend/models/: employee.py  item.py  transaction.py
frontend/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml
frontend/.husky/: pre-commit
frontend/public/: index.html
frontend/src/: App.tsx  Navbar.tsx  ResultsPage.tsx  index.tsx
frontend/src/Assets/: InsertModal.tsx  Navbar.tsx  SortedTable.tsx  UpsertModal.tsx  headCell.ts  models.ts  serverError.ts  theme.ts
frontend/src/Auth/: AuthRoutes.tsx  IAuth.ts  LoginPage.tsx
frontend/src/Employees/: EmployeesPage.tsx
frontend/src/Items/: ItemHistoryModal.tsx  ItemsPage.tsx
frontend/src/Transactions/: TransactionsPage.tsx
